[package]
name = "bruth"
version = "0.0.1-alpha.1"
edition = "2024"
[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
rusqlite = "0.37.0"
once_cell = "1.21.3"
env = "1.0.1"
uuid = { version = "1.18.1", features = ["v4"] }
dict = "0.1.5"
